<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".CategorizedProductsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linearLayout_categorizedPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_root_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/root_directory"
                android:textColor="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" > " />

            <TextView
                android:id="@+id/text_category_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/root_directory"
                android:textColor="@color/orange" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_categorizedTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout_categorizedPath"
            android:fontFamily="@font/arimo"
            android:text="@string/title_popular_products"
            android:textColor="@color/header_text"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            android:layout_alignStart="@+id/linearLayout_categorizedPath"
            android:layout_alignEnd="@id/linearLayout_categorizedPath" />

        <TextView
            android:id="@+id/textView_categoryDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arimo"
            android:text="@string/description_popular_products"
            android:textColor="@color/sub_text"
            android:textSize="@dimen/_10ssp"
            android:layout_below="@+id/textView_categorizedTitle"
            android:layout_alignStart="@+id/linearLayout_categorizedPath"
            android:layout_alignEnd="@id/linearLayout_categorizedPath"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_categorizedProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_categoryDescription"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />

        <TextView
            android:id="@+id/text_no_product_found"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView_categoryDescription"
            android:layout_marginStart="@dimen/_24ssp"
            android:layout_marginTop="@dimen/_24ssp"
            android:layout_marginEnd="@dimen/_24ssp"
            android:layout_marginBottom="@dimen/_24ssp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold"
            android:visibility="invisible" />

    </RelativeLayout>

</FrameLayout>