<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".GroceryListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5sdp">

        <TextView
            android:id="@+id/textView_shoppingListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:fontFamily="@font/arimo"
            android:text="@string/my_shopping_list"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_shoppingList"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_320sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/textView_shoppingListTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/relativeLayout_viewListControls" />

        <TextView
            android:id="@+id/textView_groceryListEmpty"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_320sdp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="@dimen/_24ssp"
            android:visibility="invisible"
            android:layout_margin="@dimen/_24ssp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/textView_shoppingListTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/relativeLayout_viewListControls" />

        <RelativeLayout
            android:id="@+id/relativeLayout_viewListControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_totalCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                app:cardBackgroundColor="@color/transparent"
                app:cardElevation="0dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/bg_bordered_rectangle"
                    android:backgroundTint="@color/light_gray"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:layout_margin="@dimen/_6sdp"
                    android:paddingTop="@dimen/_16sdp"
                    android:paddingBottom="@dimen/_16sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/estimated_total_cost"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/light_gray"
                        android:fontFamily="@font/arimo"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/textView_groceryListTotalPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_price"
                        android:textSize="@dimen/_32ssp"
                        android:textColor="@color/orange"
                        android:textStyle="bold"
                        android:fontFamily="@font/arimo"
                        android:gravity="center"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/linearLayout_groceryListButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@id/cardView_totalCost">

                <Button
                    android:id="@+id/button_back"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@drawable/bg_bordered_rectangle"
                    android:fontFamily="@font/arimo"
                    android:padding="0dp"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_readyToGo"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_toEndOf="@id/button_back"
                    android:background="@drawable/bg_white_rounded_rectangle"
                    android:backgroundTint="@color/orange"
                    android:fontFamily="@font/arimo"
                    android:padding="0dp"
                    android:text="@string/ready_to_go"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>