<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_32sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_popular_products"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15ssp"
                    android:fontFamily="@font/arimo"
                    android:text="@string/title_popular_products"
                    android:textColor="@color/header_text"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_see_all_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15ssp"
                    android:layout_marginBottom="@dimen/_10ssp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignBaseline="@id/text_popular_products"
                    android:fontFamily="@font/arimo"
                    android:text="@string/see_all"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_10ssp"
                    app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_black_18"
                    app:drawableTint="@color/orange" />

                <TextView
                    android:id="@+id/text_no_product_found"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_popular_products"
                    android:layout_centerInParent="true"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/_16ssp"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_32sdp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_popularProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_popular_products"
                    android:layout_centerInParent="true"
                    android:background="@color/background"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="4" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp">

                <TextView
                    android:id="@+id/text_product_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15ssp"
                    android:layout_marginBottom="@dimen/_5ssp"
                    android:fontFamily="@font/arimo"
                    android:text="@string/product_categories"
                    android:textColor="@color/header_text"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_productCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_product_categories"
                    android:layout_centerInParent="true"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    tools:itemCount="21"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>