<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".ProductDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" >

            <TextView
                android:id="@+id/textView_rootPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/root_directory"
                android:textColor="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" > " />

            <TextView
                android:id="@+id/textView_productDetailsCategoryPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/root_directory"
                android:textColor="@color/orange"
                android:ellipsize="end"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" > " />

            <TextView
                android:id="@+id/textView_productDetailsNamePath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/root_directory"
                android:textColor="@color/orange"
                android:ellipsize="end"
                android:maxLines="1" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_productDetailsImage"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_160sdp"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_path"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:cardCornerRadius="16dp">

            <ImageView
                android:id="@+id/imageView_productDetailsImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@mipmap/ic_grocery_dash" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_productDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/cardView_productDetailsImage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:cardCornerRadius="8dp" >

            <RelativeLayout
                android:id="@+id/relativeLayout_productDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_12sdp">

                <TextView
                    android:id="@+id/textView_productDetailsName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:fontFamily="@font/arimo"
                    android:maxLines="2"
                    android:scrollHorizontally="true"
                    android:text="@string/dummy_name"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_productDetailsPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_productDetailsName"
                    android:fontFamily="@font/arimo"
                    android:text="@string/dummy_price"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_productDetailsStock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/textView_productDetailsName"
                    android:layout_alignBottom="@+id/textView_productDetailsPrice"
                    android:fontFamily="@font/arimo"
                    android:text="@string/product_detail_in_stock"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/_12ssp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/layout_suggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:gravity="end"
            app:layout_constraintTop_toBottomOf="@id/cardView_productDetails"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/light_gray"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/orange"
                    app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_black_18"
                    app:drawableTint="@color/orange"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_recommendedProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/button_addToList"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            android:paddingBottom="@dimen/_8sdp">

            <ImageButton
                android:id="@+id/imageButton_remove"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:backgroundTint="@color/transparent"
                app:tint="@color/light_gray"
                android:src="@drawable/baseline_indeterminate_check_box_black_48"/>

            <TextView
                android:id="@+id/textView_productQuantity"
                android:layout_width="@dimen/_64sdp"
                android:layout_height="match_parent"
                android:text="1"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:fontFamily="@font/arimo"
                android:textColor="@color/dark_gray"
                android:gravity="center"/>

            <ImageButton
                android:id="@+id/imageButton_add"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:backgroundTint="@color/transparent"
                app:tint="@color/light_gray"
                android:src="@drawable/baseline_add_box_black_48"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_addToList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_rounded_rectangle"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/arimo"
            android:text="@string/add_to_list_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:layout_margin="@dimen/_8sdp"
            android:padding="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>